# fastapi-generic-oidc-auth

./: README.md  noxfile.py  pyproject.toml  realm-export-22.0.1.json
.github/workflows/: python-tests.yml
src/fastapi_generic_oidc_auth/: auth.py
src/fastapi_oidc_auth/: auth.py  exceptions.py
tests/: app.py  conftest.py  test_app.py
