[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
description = "OIDC auth in fastapi using a decorator"
name = "prokie-fastapi-oidc-auth"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["fastapi", "PyJWT[crypto]", "requests", "uvicorn"]
version = "0.1.0"
authors = [
    { name = "Matthias Osswald", email = "m@osswald.li" },
    { name = "Pontus Thomsson", email = "p@gmail.com" },
]
license = { text = "GPL-3.0-or-later" }


[project.optional-dependencies]
development = [
    "black == 23.3.0",
    "mypy == 1.4.0",
    "nox == 2023.4.22",
    "pytest == 7.4.0",
    "pytest-cov == 4.0.0",
    "types-requests == 2.28.11.17",
    "selenium == 4.10.0",
    "ruff == 0.0.287",
    "chromedriver-py == 116.0.5845.96"
]


[tool.mypy]
disable_error_code = "misc"
exclude = "migrations"
strict = true

[tool.black]
line-length = 119
target-version = ["py310"]


[tool.ruff]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "DTZ",
    "FA",
    "ISC",
    "G",
    "PIE",
    "PYI",
    "PT",
    "RET",
    "TCH",
    "INT",
    "PTH",
    "PERF",
]
fixable = ["ALL"]
line-length = 119
target-version = "py311"
